Knife Project Crashes Blender #43806

Closed
opened 2015-02-25 08:10:36 +01:00 by Carlo Andreacchio · 9 comments

System Information
Windows 7 x64 gtx 580

Blender Version
Broken: 2967253

Short description of error
Knife project sometimes fails, Recently tried to use it on a real world project and it just crashes out blender, no error message or anything. I have cut it down to a small subsection of the meshes that i was using, and it still crashes out.

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. Knife Project
  3. Crash

knifeCrash.blend

**System Information** Windows 7 x64 gtx 580 **Blender Version** Broken: 2967253 **Short description of error** Knife project sometimes fails, Recently tried to use it on a real world project and it just crashes out blender, no error message or anything. I have cut it down to a small subsection of the meshes that i was using, and it still crashes out. **Exact steps for others to reproduce the error** 1. Open attached blend file 2. Knife Project 3. Crash [knifeCrash.blend](https://archive.blender.org/developer/F145792/knifeCrash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @zeauro

Added subscriber: @zeauro
reproduced [knifeCrash.crash.txt](https://archive.blender.org/developer/F145982/knifeCrash.crash.txt)
Campbell Barton was assigned by Julian Eisel 2015-02-26 23:28:38 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Can also confirm that. Had a quick look at the code but can't see anything obvious in BLI_bvhtree_ray_cast.

Can also confirm that. Had a quick look at the code but can't see anything obvious in `BLI_bvhtree_ray_cast`.

This issue was referenced by 87dc01e690

This issue was referenced by 87dc01e690d12b1cf50aa274c59d584e355f3c86

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 87dc01e690.

Closed by commit 87dc01e690.
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#43806
No description provided.