Fix T43806: Knife project crashes

Need to re-create the bmbvh after executing the cut.